// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (jsx-equals-spacing) /src/tslint-react/jsx-equals-spacing/test.tsx[1, 9]: There should be no space before '='
ERROR: (jsx-equals-spacing) /src/tslint-react/jsx-equals-spacing/test.tsx[1, 11]: There should be no space after '='

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
<App foo = \\"bar\\" />

======
<App foo=\\"bar\\" />;

>>>>>> after
"
`;
